# esp-p4-eth

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  memory.x
.github/workflows/: ci.yml
examples/: embassy_dhcp.rs  embassy_static_ping.rs  embassy_tcp_echo_irq.rs  embassy_tcp_soak.rs
examples/dev/: clic_irq_smoke.rs  clk_dump.rs  dhcp_echo.rs  emac_dhcp.rs  emac_hello.rs  emac_init.rs  emac_loopback.rs  emac_raw.rs  embassy_irq_smoke.rs  embassy_smoke.rs  embassy_tcp_echo.rs  embassy_tcp_stress_irq.rs  embassy_time_smoke.rs  embassy_udp_echo.rs  mdio_test.rs  phy_init_diag.rs  phy_probe.rs  soak_driver.py  static_ip.rs  systimer_probe.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: rx_receive.rs  tx_transmit.rs
src/: board.rs  clic.rs  clock.rs  descriptors.rs  dma.rs  lib.rs  phy.rs  pins.rs  regs.rs  systimer.rs  time_driver.rs  time_driver_irq.rs  time_driver_irq_logic.rs
src/eth/: mod.rs
